--- a/style.css
+++ b/style.css
@@ -41,9 +41,9 @@ a:link, a:visited, a:link:active, a:visited:active {
 
 .boxone{
     width:900px;
-    background-color:slategray;}
+    background-color:#778899;}
   
-h5{color:slategray}
+h5{color:#778899}
 
 
 /* css for header and footer below */
